# wstta_agri_bot

./: .data  .gitignore  LICENSE  README.md  launch_all_nav_gz_moveit.bash  launch_cmd_vel.bash  launch_robot.bash
.github/workflows/: docs_cloudfare.yml
docker_compose_dev/: Dockerfile.master_ros2  docker-compose-gui.yml  docker-compose-nvidia.yml  ros_ws_entrypoint.sh  start_container.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/osqp-eigen/lib/: libOsqpEigen.so.0.11.0
log/: latest_build
src/bt_concepts/: CMakeLists.txt
src/bt_concepts/include/bt_concepts/: reach_location_client.hpp
src/bt_concepts/launch/: first_bt.launch.py
src/bt_concepts/src/: bt_actions.cpp  first_tree.cpp  numb_checker.cpp  reach_location_client.cpp  reach_location_server.cpp
src/bt_concepts/trees/: first_tree.xml  full_robot_ex_pipeline
src/custom_controllers/: CMakeLists.txt
src/custom_interfaces/: CMakeLists.txt  package.xml
src/mm_behaviors/: CMakeLists.txt  Doxyfile  Doxyfile.save  wrangler.jsonc
src/mm_behaviors/.github/workflows/: docs_cloudflare.yml
src/mm_behaviors/config/: bt_parameters.yaml
src/mm_behaviors/html/: actions__nodes_8hpp_source.html  annotated.html  classBatteryChecker-members.html  classBatteryChecker.html  classBatteryChecker__coll__graph.md5  classBatteryChecker__inherit__graph.map  classCheckGoToInitials-members.html  classCheckGoToInitials.html  classCheckGoToInitials__coll__graph.md5  classCheckGoToInitials__inherit__graph.map  classContainerChecker-members.html  classContainerChecker.html  classContainerChecker__inherit__graph.map  classContainerChecker__inherit__graph.md5  classExecuteArmPlan-members.html  classExecuteArmPlan.html  classExecuteArmPlan__coll__graph.map  classExecuteArmPlan__inherit__graph.md5  classGetLongPathGoalPose-members.html  classGetLongPathGoalPose.html  classGetLongPathGoalPose__coll__graph.map  classGetLongPathGoalPose__coll__graph.md5  classJustNavigateChecker-members.html  classJustNavigateChecker.html  classJustNavigateChecker__coll__graph.md5  classJustNavigateChecker__inherit__graph.map  classNavigate-members.html  classNavigate.html  classNavigate__coll__graph.md5  classNavigate__inherit__graph.map  classPlanForTheArm-members.html  classPlanForTheArm.html  classPlanForTheArm__inherit__graph.map  classPlanForTheArm__inherit__graph.md5  classStackObjectPose-members.html  classStackObjectPose.html  classStackObjectPose__coll__graph.md5  classStackObjectPose__inherit__graph.map  classUnLoad-members.html  classUnLoad.html  (+81 more)
src/mm_behaviors/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  (+1 more)
src/mm_behaviors/include/mm_behaviors/: actions_nodes.hpp  condition_nodes.hpp  mm_bt_node.hpp  mm_moveit_actions.hpp  mm_moveit_bt_nodes.hpp  mm_nav_actions.hpp  utils.hpp
src/mm_behaviors/latex/: actions__nodes_8hpp_source.tex  annotated.tex  classBatteryChecker.tex  classBatteryChecker__inherit__graph.md5  classCheckGoToInitials.tex  classCheckGoToInitials__inherit__graph.md5  classContainerChecker.tex  classContainerChecker__inherit__graph.md5  classExecuteArmPlan.tex  classExecuteArmPlan__coll__graph.md5  classGetLongPathGoalPose.tex  classGetLongPathGoalPose__inherit__graph.md5  classJustNavigateChecker.tex  classJustNavigateChecker__coll__graph.md5  classNavigate.tex  classNavigate__coll__graph.md5  classPlanForTheArm.tex  classPlanForTheArm__coll__graph.md5  classStackObjectPose.tex  classStackObjectPose__inherit__graph.md5  classUnLoad.tex  classUnLoad__inherit__graph.md5  classWSTTA_1_1BatteryChecker.tex  classWSTTA_1_1BatteryChecker__inherit__graph.md5  classWSTTA_1_1CheckGoToInitials.tex  classWSTTA_1_1CheckGoToInitials__inherit__graph.md5  classWSTTA_1_1ContainerChecker.tex  classWSTTA_1_1ContainerChecker__coll__graph.md5  classWSTTA_1_1ExecuteArmPlan.tex  classWSTTA_1_1ExecuteArmPlan__inherit__graph.md5  classWSTTA_1_1JustNavigateChecker.tex  classWSTTA_1_1JustNavigateChecker__inherit__graph.md5  classWSTTA_1_1Navigate.tex  classWSTTA_1_1Navigate__inherit__graph.md5  classWSTTA_1_1PlanExecForGripper.tex  classWSTTA_1_1PlanExecForGripper__coll__graph.md5  classWSTTA_1_1PlanForTheArm.tex  classWSTTA_1_1PlanForTheArm__inherit__graph.md5  classWSTTA_1_1WsttaBtPipelineNode.tex  classWSTTA_1_1WsttaBtPipelineNode__coll__graph.md5  (+15 more)
src/mm_behaviors/launch/: bt_node_only.launch.py  controller_manager_controllers.launch.py  controllers.launch.py  gazebo_only.launch.py  mm_bt_nodes.launch.py  robot_state_publisher.launch.py
src/mm_behaviors/src/: actions_nodes.cpp  condition_nodes.cpp  mm_bt_node.cpp  mm_moveit_actions.cpp  mm_moveit_bt_nodes.cpp  mm_nav_actions.cpp
src/mm_bringup/: CMakeLists.txt  package.xml
src/mm_moveit/: CMakeLists.txt
src/mm_nav/: CMakeLists.txt
src/mm_nav/include/mm_nav/: nav2_behaviors.hpp  navigation_client.hpp
src/mm_nav/launch/: nav2.launch.py  slam_online_sync.launch.py
src/mm_nav/maps/: map2.yaml  map_02.pgm  map_02.yaml
src/mm_nav/params/: nav2_dwa.yaml  slam_toolbox_async.yaml
src/mm_nav/rviz/: nav2_moveit2_view.rviz
src/mm_nav/src/: main.cpp  nav2_bt_node.cpp  navigation_behaviors.cpp  navigation_client.cpp
src/mm_perception/: CMakeLists.txt  package.xml
src/myplots/: joints_plots.py  plot_traject.py
src/the_ros_concepts/: CMakeLists.txt
src/the_ros_concepts/launch/: yaml_test.launch.py
src/the_ros_concepts/params/: my_node_params.yaml
src/the_ros_concepts/src/: action_client.cpp  action_server.cpp  cpp_publisher.cpp  node_to_test_yaml.cpp  osqp_node.cpp  service_client.cpp  service_server.cpp  subscriber_node.cpp
(+240 files in other folders)
